Some textures have been redone Ores generate again Implemented the Earth spell Added a casting trait